WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
167799
Fix bad assertion under HTMLTreeBuilder::processStartTagForInBody()
https://bugs.webkit.org/show_bug.cgi?id=167799
Summary
Fix bad assertion under HTMLTreeBuilder::processStartTagForInBody()
Chris Dumez
Reported
2017-02-03 10:12:03 PST
Fix bad assertion under HTMLTreeBuilder::processStartTagForInBody() when handling framesets.
Attachments
Patch
(5.77 KB, patch)
2017-02-03 10:19 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2017-02-03 10:12:19 PST
<
rdar://problem/30237241
>
Chris Dumez
Comment 2
2017-02-03 10:19:47 PST
Created
attachment 300545
[details]
Patch
Brent Fulgham
Comment 3
2017-02-03 12:29:39 PST
Comment on
attachment 300545
[details]
Patch r=me
Chris Dumez
Comment 4
2017-02-03 12:51:07 PST
Comment on
attachment 300545
[details]
Patch Clearing flags on attachment: 300545 Committed
r211645
: <
http://trac.webkit.org/changeset/211645
>
Chris Dumez
Comment 5
2017-02-03 12:51:12 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug